chore: Add vera-food/ to .gitignore
Exclude cloned external repository from workspace backup.
vera-food is managed separately at https://github.com/zaharenok/vera-food

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ Thumbs.db
 # Keep memory folder local (personal notes)
 # Comment out if you want to sync it
 memory/
+
+# External repos (cloned separately)
+vera-food/
